<resources>
    <string name="app_name">Sahab</string>
    <string name="tv_login_title">SAHAB</string>
    <string name="tv_login_subtitle">Towing Car Ordering App</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email_address">Email address</string>
    <string name="reset_password">Reset password</string>
    <string name="password">Password</string>
    <string name="create_an_account">Create an Account</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="Username">Username</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date">date of birth</string>
    <string name="button_login">LOGIN</string>
    <string name="button_signup">Sign Up</string>
    <string name="tvsplash">Sahab</string>
    <string name="available_services">Available Services</string>
    <string name="towing_car">Towing Car</string>
    <string name="mechanical_service">Mechanical Service</string>
    <string name="cancel">Cancel</string>
    <string name="login_error_password"><![CDATA[>Password must contain at least 8 characters.]]></string>
    <string name="welcome_hint">Towing Car Ordering App</string>
    <string name="get_start_hint">Get Start</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="sahab_hint">Sahab</string>
    <string name="login_hint">Login</string>
    <string name="name_hint">Name</string>
    <string name="phone_hint">phone</string>
    <string name="car_details_hint">Car details</string>
    <string name="spare_part_hint">spare part</string>
    <string name="location_hint">Select Your Location</string>
    <string name="request_spare_hint">Request spare part</string>
    <string name="car_model_hint">Car model</string>
    <string name="car_type_hint">Car type</string>
    <string name="describe_your_problem_hint">Describe your problem</string>
    <string name="request_tow_truck_hint">Request tow truck</string>

    <string name="ok">OK</string>
    <string name="locations_snackbar">Show distance to locations?</string>
    <string name="locations_rationale">We need access to your location to show you recreation opportunities near your current location. This data is not stored or shared.</string>
    <string name="map_snackbar">Show your location on the map?</string>
    <string name="map_rationale">We need access to your location to show your location relative to recreation opportunities near you. This data is not stored or shared.</string>
    <string name="activities_location_snackbar">Use location to show nearby activities?</string>
    <string name="activities_location_rationale">We need access to your location to show you recreation opportunities near your current location. This data is not stored or shared.</string>
    <string name="activities_background_snackbar">Share location when the app is not in use for activities near you? Data is not shared or stored.</string>
    <string name="activities_background_rationale">Using the locations nearby functionality requires background access to your location in order to detect nearby locations. This data is not stored or shared.</string>
    <string name="activities_background_reminder">We use your location even when this app is closed to share nearby activities</string>

    <string name="confirm_hint">Confirm</string>
    <string name="login_failed">Login Failed</string>
    <string name="login_successful">Login Successful</string>
    <string name="fields_required">All fields required</string>
    <string name="login">login</string>
</resources>