<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".service.ServiceFragment"
    android:background="@drawable/test">

    <TextView
        android:id="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/available_services"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_towing"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:drawableEnd="@drawable/ic_baseline_car_repair_24"
        android:text="@string/towing_car"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button_mechanic"
        app:layout_constraintEnd_toEndOf="@+id/button_towing"
        app:layout_constraintStart_toStartOf="@+id/button_towing"
        app:layout_constraintTop_toBottomOf="@+id/button_towing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:drawableEnd="@drawable/ic_baseline_construction_24"
        android:text="@string/mechanical_service"
        android:textSize="18sp" />

    <Button
        android:id="@+id/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_mechanic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textSize="18sp" />

</androidx.constraintlayout.widget.ConstraintLayout>